<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="8dp"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical"
        android:padding="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingBottom="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/question1" />

            <RadioGroup
                android:id="@+id/question1_radio_group"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/ques1_a_radio_button"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:onClick="onRadioButtonClicked"
                    android:text="@string/question1_option_a" />

                <RadioButton
                    android:id="@+id/ques1_b_radio_button"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:onClick="onRadioButtonClicked"
                    android:text="@string/question1_option_b" />

                <RadioButton
                    android:id="@+id/ques1_c_radio_button"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:onClick="onRadioButtonClicked"
                    android:text="@string/question1_option_c" />

            </RadioGroup>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingBottom="5dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/question2" />

            <RadioGroup
                android:id="@+id/question2_radio_group"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/ques2_a_radio_button"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:onClick="onRadioButtonClicked"
                    android:text="@string/question2_option_a" />

                <RadioButton
                    android:id="@+id/ques2_b_radio_button"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:onClick="onRadioButtonClicked"
                    android:text="@string/question2_option_b" />

                <RadioButton
                    android:id="@+id/ques2_c_radio_button"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:onClick="onRadioButtonClicked"
                    android:text="@string/question2_option_c" />
            </RadioGroup>
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingBottom="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/question3" />

            <LinearLayout
                android:id="@+id/question3_radio_group"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/ques3_a_check_box"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:onClick="onCheckBoxClicked"
                    android:text="@string/question3_option_a" />

                <CheckBox
                    android:id="@+id/ques3_b_check_box"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:onClick="onCheckBoxClicked"
                    android:text="@string/question3_option_b" />

                <CheckBox
                    android:id="@+id/ques3_c_check_box"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:onClick="onCheckBoxClicked"
                    android:text="@string/question3_option_c" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingBottom="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/question4" />

            <RadioGroup
                android:id="@+id/question4_radio_group"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/ques4_a_radio_button"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:onClick="onRadioButtonClicked"
                    android:text="@string/question4_option_a" />

                <RadioButton
                    android:id="@+id/ques4_b_radio_button"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:onClick="onRadioButtonClicked"
                    android:text="@string/question4_option_b" />

                <RadioButton
                    android:id="@+id/ques4_c_radio_button"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:onClick="onRadioButtonClicked"
                    android:text="@string/question4_option_c" />
            </RadioGroup>
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingBottom="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/question5" />

            <RadioGroup
                android:id="@+id/question5_radio_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/ques5_a_radio_button"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:onClick="onRadioButtonClicked"
                    android:text="@string/question5_option_a" />

                <RadioButton
                    android:id="@+id/ques5_b_radio_button"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:onClick="onRadioButtonClicked"
                    android:text="@string/question5_option_b" />

                <RadioButton
                    android:id="@+id/ques5_c_radio_button"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:onClick="onRadioButtonClicked"
                    android:text="@string/question5_option_c" />
            </RadioGroup>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:paddingBottom="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question6" />

            <EditText
                android:id="@+id/continent_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingBottom="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/question7" />

            <RadioGroup
                android:id="@+id/question7_radio_group"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/ques7_a_radio_button"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:onClick="onRadioButtonClicked"
                    android:text="@string/question7_option_a" />

                <RadioButton
                    android:id="@+id/ques7_b_radio_button"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:onClick="onRadioButtonClicked"
                    android:text="@string/question7_option_b" />

                <RadioButton
                    android:id="@+id/ques7_c_radio_button"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:onClick="onRadioButtonClicked"
                    android:text="@string/question7_option_c" />
            </RadioGroup>
        </LinearLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:onClick="submit"
            android:text="Submit" />

    </LinearLayout>
</ScrollView>


